Fix JVM options for JOSM